<resources>
    <string name="app_name">Lichen</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_invoices">InvoicesActivity</string>
    <string name="label_main_accounts">accounts</string>
    <string name="label_main_invoices">invoices</string>
    <string name="label_main_new_account">new account</string>
    <string name="label_main_new_invoice">new invoice</string>
    <string name="label_global_save">save</string>
    <string name="label_nav_main_transactions">Transactions</string>
    <string name="activity_title_new_invoice">New Invoice</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="transaction_status_open">open</string>
    <string name="transaction_status_closed">closed</string>
    <string name="transaction_status_unknown">unknown</string>

    <string name="label_invoice_total">Total</string>
    <string name="label_invoice_subtotal">Subtotal</string>
    <string name="label_invoice_tax">Tax</string>
    <string name="label_invoice_lichenize">Lichenize</string>
    <string name="label_invoice_show_changes">Show changes</string>
    <string name="label_invoice_due">Due</string>
    <string name="label_invoice_issued">Issued</string>
    <string name="label_invoice_items">Items</string>

    <string name="label_not_lichenized">This invoice has not yet been processed by Lichen</string>

    <string name="fmt_transaction_invoices">%1$d invoices</string>
    <string name="fmt_transaction_new_invoices">%1$d new invoices</string>
    <string name="fmt_transaction_rules">%1$d rules</string>
    <string name="fmt_invoice_payee">%1$s (%2$s)</string>
    <string name="fmt_applied_rules">%1$d rules</string>

    <string name="gcm_sender_id">929318564370</string>
    <string name="label_invoice_changes_rules">1 rule</string>
    <string name="label_invoice_changes_changes"><![CDATA[<font color="#db5800">before</font> &amp; <font color="#007348">after</font>]]></string>
    <string name="label_login_failed">Login failed. Verify your credentials.</string>
</resources>
