<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="@dimen/lichen_card_radius"
    card_view:cardElevation="@dimen/lichen_card_elevation">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lichen_component_margin_vertical"
            android:layout_marginBottom="@dimen/lichen_component_margin_vertical"
            android:layout_marginStart="@dimen/lichen_component_margin_horizontal"
            android:layout_marginLeft="@dimen/lichen_component_margin_horizontal"
            android:layout_marginEnd="@dimen/lichen_component_margin_horizontal"
            android:layout_marginRight="@dimen/lichen_component_margin_horizontal">
            <TextView
                android:id="@+id/label_summary_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                style="@style/lichen_card_title_large"
                tools:text="$10999.88"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/label_summary_total"
                style="@style/lichen_label_large"
                android:text="@string/label_invoice_total"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:layout_marginBottom="4sp"
            android:layout_marginStart="6sp"
            android:layout_marginLeft="6sp"
            android:layout_marginEnd="6sp"
            android:layout_marginRight="6sp">
            <TextView
                android:id="@+id/label_summary_issued"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                style="@style/lichen_card_title"
                tools:text="2016 Sep 10"/>
            <TextView
                android:id="@+id/label_summary_due"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                style="@style/lichen_card_title"
                tools:text="2016 Sep 30"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/label_summary_issued"
                style="@style/lichen_label"
                android:text="@string/label_invoice_issued"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/label_summary_due"
                style="@style/lichen_label"
                android:text="@string/label_invoice_due"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>