<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:orientation="vertical">
            <!-- invoice header -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18sp">
                <TextView
                    android:id="@+id/label_transaction_invoices_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:textSize="20sp"
                    tools:text="TOSL108"/>
                <TextView
                    android:id="@+id/label_payee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/label_transaction_invoices_id"
                    android:textSize="16sp"
                    tools:text="Bob Smith (Smith and Sons)"/>
                <TextView
                    android:id="@+id/label_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/label_payee"
                    android:layout_marginTop="24sp"
                    android:textSize="24sp"
                    tools:text="$10999.88"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/label_total"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:text="@string/label_invoice_total"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_invoice_lichenize"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true">
                </Button>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp">
                <TextView
                    android:id="@+id/label_date_issued"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="16sp"
                    tools:text="2016 Sep 10"/>
                <TextView
                    android:id="@+id/label_date_due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    tools:text="2016 Sep 30"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/label_date_issued"
                    android:textSize="12sp"
                    android:text="@string/label_invoice_issued"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/label_date_due"
                    android:textSize="12sp"
                    android:text="@string/label_invoice_due"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/label_invoice_items"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/collection_invoice_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
<!--
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="horizontal"
                                     android:layout_marginTop="8sp">
                                     <TextView
                                         android:layout_width="0dp"
                                         android:layout_height="wrap_content"
                                         android:textSize="12sp"
                                         android:layout_weight="1"
                                         tools:text="Very long description of an item that should wrap into multiple lines so that I can see what THAT looks like."/>
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginLeft="30sp"
                                         android:textSize="12sp"
                                         tools:text="$10000 (USD)"/>
                                 </LinearLayout>
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="horizontal"
                                     android:layout_marginTop="8sp">
                                     <TextView
                                         android:layout_width="0dp"
                                         android:layout_height="wrap_content"
                                         android:textSize="12sp"
                                         android:layout_weight="1"
                                         tools:text="Shorter."/>
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginLeft="30sp"
                                         android:textSize="12sp"
                                         tools:text="$10 (USD)"/>
                                 </LinearLayout>
                                 -->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
